<resources>
    <string name="app_name">OjekOnline</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="hp">Hp</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">login</string>
    <string name="dha_signup">Dont have account? Sign Up</string>
    <string name="sign_up_google">Sign Up Google</string>
    <string name="or">OR</string>
    <string name="input_nomor_hp">input nomor hp</string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="history">History</string>
    <string name="dari_mana">Dari mana?</string>
    <string name="mau_mana">Mau kemana?</string>
    <string name="harga">Harga</string>
    <string name="rp_50_000">Rp.50.000</string>
    <string name="estimasi_waktu">Estimasi Waktu</string>
    <string name="_3_menit">3 menit</string>
    <string name="pesan">Pesan</string>
    <string name="title_activity_maps">Map</string>
    <string name="serpong_tanggerang">Serpong, Tanggerang</string>
    <string name="nama">Nama :</string>
    <string name="namaku">Asma Syafira</string>
    <string name="gmailku">asmasyfr@gmail.com</string>
    <string name="nomorku">081311977804</string>
    <string name="sign_out">Sign Out</string>
    <string name="nama_driver">nama driver</string>
</resources>
