<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:background="@color/yellow"
    tools:context=".login.LoginActivity">

    <ImageView
        android:id="@+id/logo_splash"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:src="@drawable/motor" />

    <EditText
        android:id="@+id/loginName"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="140dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/background"
        android:gravity="center"
        android:hint="@string/name"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/loginName"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/background"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="18sp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/loginPassword"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/background2"
        android:text="@string/login"
        android:textColor="@color/yellow2" />

    <TextView
        android:id="@+id/signUpLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButton"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:text="@string/dha_signup" />

    <TextView
        android:id="@+id/textOr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signUpLink"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:text="@string/or"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/signUpButtonGmail"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/textOr"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/background2"
        android:text="@string/sign_up_google"
        android:textColor="@color/yellow2" />

</RelativeLayout>